# contest-automata

./: .hgignore  README.md  README.txt  contest-automata.cabal  sample.dfa  sample.input  sample.input-output  test.hs
DFA/: DFA.hs  Turing.tar  sampleDFA.hs  sampleDFA2.hs
DFA/Turing/: auto_grader.py  check_answer.py
DFA/Turing/2/: @author  @notes
DFA/Turing/5/: @notes  solution
DFA/Turing/5/@code/: input.correct.nfa
DFA/Turing/Given/: TODO
old/DFA/: DFA.hs
old/DFA/Turing/: dfaParser.py
old/DFA/Turing/5/: input
old/DFA/Turing/Given/: Project
scratch/: PParse.hs  PTokenize.hs  Parser.y  Scanner.hs  Scanner.x
specifications/: connector.py  input.team1.nfa
specifications/1/: @notes  input  solution
specifications/1/@code/: input.correct.nfa
specifications/10/: @notes  input
specifications/10/@code/: correct.nfa.hs  input.correct.nfa
specifications/2/: input  solution
specifications/2/@code/: input.correct.nfa
specifications/5/@code/: correct.nfa.hs
specifications/Given/: Problems  README
src/: Automata.hs  Main.hs
src/Automata/: Automaton.hs  DFA.hs
src/Automata/DFA/: AST.hs  Codegen.hs  Evaluate.hs  Parse.hs  Tokenize.hs
src/DFA/: AST.hs  Codegen.hs  Graph.hs  Parse.hs  Tokenize.hs
src/Data/Graph/Inductive/: Utils.hs
src/Data/String/: Builder.hs
