Name:                contest-automata
Version:             0.1
Synopsis:            Run various automata against known inputs for contests
--Description:         
License:             BSD3
License-file:        LICENSE
Author:              Daniel Lyons
Maintainer:          fusion@storytotell.org
Category:            Contest
Build-type:          Simple

Extra-source-files: README.txt

Cabal-version:       >=1.2

Executable contest-automata
  -- .hs or .lhs file containing the Main module.
  -- Main-is:             
  
  -- Packages needed in order to build this package.
  Build-depends: 
    parsec >= 3.1.2
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  